# cloud-server

./: Cargo.toml  Config.toml  Dockerfile  config.toml  postgres.sql  sqlx-data.json
src/: config.rs  configuration.rs  main.rs
