[package]
name = "cloud-server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.130"
actix-web = "3.3.2"
actix-cors = "0.5.4"
sqlx = { version = "0.5.9", features = [ "runtime-actix-rustls" ] }
